Updated resume to modern 2-column layout

--- a/index.html
+++ b/index.html
@@ -1,18 +1,74 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Christopher Wright · Personal Website</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-  <div class="container py-5">
-    <h1 class="display-4 text-center">Welcome to Christopher Wright’s Website</h1>
-    <p class="lead text-center">This is my personal site hosted on GitHub Pages.</p>
-    <p class="text-center">
-      <a class="btn btn-primary" href="#about">About Me</a>
+<!-- ======= Resume Section ======= -->
+<section id="resume" class="resume py-5">
+  <div class="container">
+    <h2 class="mb-4">Resume</h2>
+
+    <!-- Download Button -->
+    <p>
+      <a href="resume/Christopher_Wright_Resume.pdf" target="_blank" class="btn btn-primary">
+        Download Resume (PDF)
+      </a>
     </p>
+
+    <div class="row mt-4">
+      <!-- Left Column -->
+      <div class="col-lg-6" data-aos="fade-right">
+        <h4>Christopher Wright</h4>
+        <p><strong>Contact:</strong> 539-222-6000 | 
+          <a href="mailto:Christopherwright435@gmail.com">Christopherwright435@gmail.com</a> | Tulsa, Oklahoma</p>
+        <p><a href="https://linkedin.com/in/christopher-wright-376034153" target="_blank">LinkedIn</a> | 
+           <a href="https://github.com/NamesteSensei" target="_blank">GitHub</a></p>
+
+        <h5 class="mt-4">Summary</h5>
+        <p>Tech-focused learner pursuing certifications in cybersecurity and data analytics, with current training in machine learning at Atlas School. Dedicated to building tools and systems that turn data into action and insight.</p>
+
+        <h5 class="mt-4">Education</h5>
+        <ul>
+          <li><strong>Diploma in Computer Science and Machine Learning</strong> – Atlas School, Tulsa, OK (Expected May 2026, GPA: 3.0)</li>
+          <li><strong>Mobile Application Development Program</strong> – Tulsa Technology Center (Graduated April 2019, GPA: 4.0)</li>
+        </ul>
+
+        <h5 class="mt-4">Certifications</h5>
+        <ul>
+          <li>Google Cybersecurity Certification</li>
+          <li>Google Advanced Data Analytics Certification</li>
+        </ul>
+
+        <h5 class="mt-4">Experience</h5>
+        <p><strong>Mobile Application Developer</strong> – Hot Coffey, Bixby, OK (Aug 2019 – Jan 2021)</p>
+        <ul>
+          <li>Designed and presented mobile app wireframes to clients</li>
+          <li>Collaborated with clients on design features, user flow, and functionality</li>
+          <li>Debugged existing iOS apps and resolved performance issues</li>
+          <li>Worked with web developers and designers to integrate UI elements</li>
+        </ul>
+      </div>
+
+      <!-- Right Column -->
+      <div class="col-lg-6" data-aos="fade-left">
+        <h5>Skills</h5>
+        <p><strong>Languages:</strong> Python, C, Swift</p>
+        <p><strong>Frameworks:</strong> React, TensorFlow, Flask, MediaPipe, MATLAB</p>
+        <p><strong>Tools & Tech:</strong> GitHub, Xcode, VS Code, SIEM tools, API testing, flowcharting</p>
+        <p><strong>Cybersecurity:</strong> Familiar with SIEM tools and security debugging</p>
+        <p><strong>Languages:</strong> English (Professional), ASL (Native/Fluent), Spanish Sign Language (Conversational), Español (Basic)</p>
+
+        <h5 class="mt-4">Projects</h5>
+        <ul>
+          <li><strong>Sign Language Recognition Engine</strong> – 
+            <a href="https://github.com/NamesteSensei/sign-language-engine" target="_blank">GitHub</a><br>
+            Built real-time ASL gesture recognition using Python, Flask, and MediaPipe.
+          </li>
+          <li><strong>AirBnB Clone – Command Interpreter</strong> – 
+            <a href="https://github.com/Anthonyschools2024/atlas-AirBnB_clone" target="_blank">GitHub</a><br>
+            Developed CLI for object creation, update, and serialization in Python.
+          </li>
+          <li><strong>Sorting Algorithms in C</strong> – 
+            <a href="https://github.com/NamesteSensei/atlas-sorting_algorithms" target="_blank">GitHub</a><br>
+            Implemented Bubble Sort and Selection Sort with performance optimization.
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
-</body>
-</html>
+</section>
