--- a/index.html
+++ b/index.html
@@ -1,74 +1,202 @@
-<!-- ======= Resume Section ======= -->
-<section id="resume" class="resume py-5">
-  <div class="container">
-    <h2 class="mb-4">Resume</h2>
+<!DOCTYPE html>
+<html lang="en">
 
-    <!-- Download Button -->
-    <p>
-      <a href="resume/Christopher_Wright_Resume.pdf" target="_blank" class="btn btn-primary">
-        Download Resume (PDF)
-      </a>
-    </p>
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <div class="row mt-4">
-      <!-- Left Column -->
-      <div class="col-lg-6" data-aos="fade-right">
-        <h4>Christopher Wright</h4>
-        <p><strong>Contact:</strong> 539-222-6000 | 
-          <a href="mailto:Christopherwright435@gmail.com">Christopherwright435@gmail.com</a> | Tulsa, Oklahoma</p>
-        <p><a href="https://linkedin.com/in/christopher-wright-376034153" target="_blank">LinkedIn</a> | 
-           <a href="https://github.com/NamesteSensei" target="_blank">GitHub</a></p>
+  <title>Christopher Wright - Personal Website</title>
+  <meta content="Portfolio website for Christopher Wright" name="description">
+  <meta content="Christopher Wright, Portfolio, Resume, GitHub, LinkedIn" name="keywords">
 
-        <h5 class="mt-4">Summary</h5>
-        <p>Tech-focused learner pursuing certifications in cybersecurity and data analytics, with current training in machine learning at Atlas School. Dedicated to building tools and systems that turn data into action and insight.</p>
+  <!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-        <h5 class="mt-4">Education</h5>
-        <ul>
-          <li><strong>Diploma in Computer Science and Machine Learning</strong> – Atlas School, Tulsa, OK (Expected May 2026, GPA: 3.0)</li>
-          <li><strong>Mobile Application Development Program</strong> – Tulsa Technology Center (Graduated April 2019, GPA: 4.0)</li>
-        </ul>
+  <!-- Vendor CSS -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
 
-        <h5 class="mt-4">Certifications</h5>
-        <ul>
-          <li>Google Cybersecurity Certification</li>
-          <li>Google Advanced Data Analytics Certification</li>
-        </ul>
+  <!-- Main CSS -->
+  <link href="assets/css/main.css" rel="stylesheet">
+</head>
 
-        <h5 class="mt-4">Experience</h5>
-        <p><strong>Mobile Application Developer</strong> – Hot Coffey, Bixby, OK (Aug 2019 – Jan 2021)</p>
-        <ul>
-          <li>Designed and presented mobile app wireframes to clients</li>
-          <li>Collaborated with clients on design features, user flow, and functionality</li>
-          <li>Debugged existing iOS apps and resolved performance issues</li>
-          <li>Worked with web developers and designers to integrate UI elements</li>
-        </ul>
-      </div>
+<body>
 
-      <!-- Right Column -->
-      <div class="col-lg-6" data-aos="fade-left">
-        <h5>Skills</h5>
-        <p><strong>Languages:</strong> Python, C, Swift</p>
-        <p><strong>Frameworks:</strong> React, TensorFlow, Flask, MediaPipe, MATLAB</p>
-        <p><strong>Tools & Tech:</strong> GitHub, Xcode, VS Code, SIEM tools, API testing, flowcharting</p>
-        <p><strong>Cybersecurity:</strong> Familiar with SIEM tools and security debugging</p>
-        <p><strong>Languages:</strong> English (Professional), ASL (Native/Fluent), Spanish Sign Language (Conversational), Español (Basic)</p>
-
-        <h5 class="mt-4">Projects</h5>
-        <ul>
-          <li><strong>Sign Language Recognition Engine</strong> – 
-            <a href="https://github.com/NamesteSensei/sign-language-engine" target="_blank">GitHub</a><br>
-            Built real-time ASL gesture recognition using Python, Flask, and MediaPipe.
-          </li>
-          <li><strong>AirBnB Clone – Command Interpreter</strong> – 
-            <a href="https://github.com/Anthonyschools2024/atlas-AirBnB_clone" target="_blank">GitHub</a><br>
-            Developed CLI for object creation, update, and serialization in Python.
-          </li>
-          <li><strong>Sorting Algorithms in C</strong> – 
-            <a href="https://github.com/NamesteSensei/atlas-sorting_algorithms" target="_blank">GitHub</a><br>
-            Implemented Bubble Sort and Selection Sort with performance optimization.
-          </li>
-        </ul>
+  <!-- ======= Header / Hero ======= -->
+  <header id="header" class="d-flex flex-column justify-content-center">
+    <div class="container text-center">
+      <h1>Christopher Wright</h1>
+      <p>Welcome to my personal website</p>
+      <div class="social-links mt-3">
+        <a href="https://github.com/NamesteSensei" target="_blank" class="github"><i class="bi bi-github"></i></a>
+        <a href="https://linkedin.com/in/christopher-wright-376034153" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="mailto:Christopherwright435@gmail.com" class="email"><i class="bi bi-envelope"></i></a>
       </div>
     </div>
-  </div>
-</section>
+  </header>
+
+  <!-- ======= About Section ======= -->
+  <section id="about" class="about py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 text-center" data-aos="fade-right">
+          <img src="assets/img/profile-img.jpg" class="img-fluid rounded-circle" alt="Christopher Wright">
+        </div>
+        <div class="col-lg-8 content" data-aos="fade-left">
+          <h2>About Me</h2>
+          <p>Hello, I’m <strong>Christopher Wright</strong>, a developer passionate about building clean, efficient, and impactful technology. I enjoy working with Python, machine learning, and web development to solve real-world problems.</p>
+          <p>Outside of coding, I love learning new frameworks, mentoring peers, and staying up-to-date with modern tech trends.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- ======= Portfolio Section ======= -->
+  <section id="portfolio" class="portfolio py-5 bg-light">
+    <div class="container">
+      <h2 class="mb-4">Portfolio</h2>
+      <div class="row gy-4">
+
+        <!-- Project 1 -->
+        <div class="col-lg-4 col-md-6 portfolio-item" data-aos="fade-up">
+          <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <h4>Machine Learning Project</h4>
+            <p>Clustering with K-Means in Python</p>
+            <a href="assets/img/portfolio/app-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Machine Learning Project"></a>
+            <a href="https://github.com/NamesteSensei/atlas-machine_learning#readme" target="_blank" class="details-link"><i class="bi bi-link"></i></a>
+          </div>
+        </div>
+
+        <!-- Project 2 -->
+        <div class="col-lg-4 col-md-6 portfolio-item" data-aos="fade-up" data-aos-delay="100">
+          <img src="assets/img/portfolio/app-2.jpg" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <h4>Web App</h4>
+            <p>Flask-based Portfolio Demo</p>
+            <a href="assets/img/portfolio/app-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web App"></a>
+            <a href="https://github.com/NamesteSensei" target="_blank" class="details-link"><i class="bi bi-link"></i></a>
+          </div>
+        </div>
+
+        <!-- Project 3 -->
+        <div class="col-lg-4 col-md-6 portfolio-item" data-aos="fade-up" data-aos-delay="200">
+          <img src="assets/img/portfolio/app-3.jpg" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <h4>Data Visualization</h4>
+            <p>Interactive dashboards with Matplotlib/Seaborn</p>
+            <a href="assets/img/portfolio/app-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Data Visualization"></a>
+            <a href="https://github.com/NamesteSensei" target="_blank" class="details-link"><i class="bi bi-link"></i></a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- ======= Resume Section ======= -->
+  <section id="resume" class="resume py-5">
+    <div class="container">
+      <h2 class="mb-4">Resume</h2>
+
+      <!-- Download Button -->
+      <p>
+        <a href="resume/Christopher_Wright_Resume.pdf" target="_blank" class="btn btn-primary">
+          Download Resume (PDF)
+        </a>
+      </p>
+
+      <div class="row mt-4">
+        <!-- Left Column -->
+        <div class="col-lg-6" data-aos="fade-right">
+          <h4>Christopher Wright</h4>
+          <p><strong>Contact:</strong> 539-222-6000 | 
+            <a href="mailto:Christopherwright435@gmail.com">Christopherwright435@gmail.com</a> | Tulsa, Oklahoma</p>
+          <p><a href="https://linkedin.com/in/christopher-wright-376034153" target="_blank">LinkedIn</a> | 
+             <a href="https://github.com/NamesteSensei" target="_blank">GitHub</a></p>
+
+          <h5 class="mt-4">Summary</h5>
+          <p>Tech-focused learner pursuing certifications in cybersecurity and data analytics, with current training in machine learning at Atlas School. Dedicated to building tools and systems that turn data into action and insight.</p>
+
+          <h5 class="mt-4">Education</h5>
+          <ul>
+            <li><strong>Diploma in Computer Science and Machine Learning</strong> – Atlas School, Tulsa, OK (Expected May 2026, GPA: 3.0)</li>
+            <li><strong>Mobile Application Development Program</strong> – Tulsa Technology Center (Graduated April 2019, GPA: 4.0)</li>
+          </ul>
+
+          <h5 class="mt-4">Certifications</h5>
+          <ul>
+            <li>Google Cybersecurity Certification</li>
+            <li>Google Advanced Data Analytics Certification</li>
+          </ul>
+
+          <h5 class="mt-4">Experience</h5>
+          <p><strong>Mobile Application Developer</strong> – Hot Coffey, Bixby, OK (Aug 2019 – Jan 2021)</p>
+          <ul>
+            <li>Designed and presented mobile app wireframes to clients</li>
+            <li>Collaborated with clients on design features, user flow, and functionality</li>
+            <li>Debugged existing iOS apps and resolved performance issues</li>
+            <li>Worked with web developers and designers to integrate UI elements</li>
+          </ul>
+        </div>
+
+        <!-- Right Column -->
+        <div class="col-lg-6" data-aos="fade-left">
+          <h5>Skills</h5>
+          <p><strong>Languages:</strong> Python, C, Swift</p>
+          <p><strong>Frameworks:</strong> React, TensorFlow, Flask, MediaPipe, MATLAB</p>
+          <p><strong>Tools & Tech:</strong> GitHub, Xcode, VS Code, SIEM tools, API testing, flowcharting</p>
+          <p><strong>Cybersecurity:</strong> Familiar with SIEM tools and security debugging</p>
+          <p><strong>Languages:</strong> English (Professional), ASL (Native/Fluent), Spanish Sign Language (Conversational), Español (Basic)</p>
+
+          <h5 class="mt-4">Projects</h5>
+          <ul>
+            <li><strong>Sign Language Recognition Engine</strong> – 
+              <a href="https://github.com/NamesteSensei/sign-language-engine" target="_blank">GitHub</a><br>
+              Built real-time ASL gesture recognition using Python, Flask, and MediaPipe.
+            </li>
+            <li><strong>AirBnB Clone – Command Interpreter</strong> – 
+              <a href="https://github.com/Anthonyschools2024/atlas-AirBnB_clone" target="_blank">GitHub</a><br>
+              Developed CLI for object creation, update, and serialization in Python.
+            </li>
+            <li><strong>Sorting Algorithms in C</strong> – 
+              <a href="https://github.com/NamesteSensei/atlas-sorting_algorithms" target="_blank">GitHub</a><br>
+              Implemented Bubble Sort and Selection Sort with performance optimization.
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- ======= Contact Section ======= -->
+  <section id="contact" class="contact py-5 bg-light">
+    <div class="container">
+      <h2 class="mb-4">Contact Me</h2>
+      <p>If you’d like to reach me directly:</p>
+      <a href="mailto:Christopherwright435@gmail.com" class="btn btn-success">Email Me</a>
+    </div>
+  </section>
+
+  <!-- ======= Footer ======= -->
+  <footer id="footer" class="footer text-center py-4 bg-dark text-light">
+    <div class="container">
+      <p>&copy; 2025 Christopher Wright. All Rights Reserved.</p>
+    </div>
+  </footer>
+
+  <!-- Vendor JS -->
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+
+  <!-- Main JS -->
+  <script src="assets/js/main.js"></script>
+
+</body>
+</html>
